# DuraLang

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPECIFICATIONS.md  pyproject.toml
docs/: activities.md  api-reference.md  architecture.md  configuration.md  core-concepts.md  error-handling.md  examples.md  faq.md  getting-started.md  human-in-the-loop.md  index.md  temporal-internals.md  tools-and-mcp.md
duralang/: __init__.py  agent_tool.py  cli.py  config.py  context.py  decorator.py  dura_agent.py  dura_model.py  dura_tool.py  exceptions.py  graph_def.py  proxy.py  registry.py  runner.py  state.py  workflow.py
duralang/activities/: __init__.py  _heartbeat.py  llm.py  mcp.py  tool.py
examples/: basic_agent.py  crash_recovery.py  human_in_loop.py  mcp_agent.py  multi_agent.py  multi_model.py  multi_tool.py  multiagent_system.py  sequential_agents.py  simple_agent.py  stochastic_agents.py
examples/basic_agent/: main.py
examples/human_in_loop/: main.py
examples/mcp_agent/: main.py
examples/multi_model/: main.py
langforge/: __init__.py  compiler.py  config.py  exceptions.py  graph_def.py  llm_factory.py  registry.py  runtime.py  signals.py  state.py  workflow.py
langforge/activities/: __init__.py  mcp.py  node.py  tool.py
tests/: conftest.py
tests/integration/: test_basic.py
tests/unit/: test_agent_tool.py  test_compiler.py  test_context.py  test_decorator.py  test_llm_identity.py  test_mcp_activity.py  test_node_activity.py  test_proxy.py  test_registry_safety.py  test_serialization_edge.py  test_state.py  test_tool_activity.py  test_workflow.py
