[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langforge"
version = "0.1.0"
requires-python = ">=3.11"
description = "Durable LangGraph execution powered by Temporal"

dependencies = [
    "temporalio>=1.7.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.3.0"]
openai = ["langchain-openai>=0.2.0"]
google = ["langchain-google-genai>=2.0.0"]
ollama = ["langchain-ollama>=0.2.0"]
all-models = [
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "temporalio[testserver]>=1.7.0",
    "langforge[all-models]",
    "ruff",
    "mypy",
]

[project.scripts]
langforge = "langforge.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
