[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duralang"
version = "0.1.4"
requires-python = ">=3.11"
description = "Write normal LangChain code. Get Temporal durability. One decorator."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Deepansh Saxena" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["langchain", "temporal", "durability", "agents", "llm", "mcp"]

dependencies = [
    "temporalio>=1.7.0,<2.0",
    "langchain>=1.2.0,<2.0",
    "langchain-core>=0.3.0,<1.0",
    "mcp>=1.0.0,<2.0",
    "pydantic>=2.0.0,<3.0",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.3.0"]
openai = ["langchain-openai>=0.2.0"]
google = ["langchain-google-genai>=2.0.0"]
ollama = ["langchain-ollama>=0.2.0"]
all-models = [
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "temporalio[testserver]>=1.7.0",
    "duralang[all-models]",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/deepansh-saxena/DuraLang"
Repository = "https://github.com/deepansh-saxena/DuraLang"
Documentation = "https://github.com/deepansh-saxena/DuraLang/tree/main/docs"

[project.scripts]
duralang = "duralang.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
